feat(sykmeldt): expose unntaksvurderinger
Closes #401
